[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wgpu-shadertoy"
dynamic = ["version", "readme"]
dependencies = [
  "wgpu>=0.13.2,<0.14.0",
]
description = "Shadertoy implementation based on wgpu-py"
license = {file = "LICENSE"}
requires-python = ">=3.8.0"
authors = [
  {name = "Jan Kels", email = "Jan.Kels@hhu.de"},
]

[project.urls]
Repository = "https://github.com/pygfx/shadertoy"

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest",
    "ruff",
    "imageio",
    "wheel",
    "setuptools",
    "twine",
    "glfw",
]

[tool.setuptools.dynamic]
version = {attr = "wgpu_shadertoy.__version__"}
readme = {file = ["README.md"]}

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "RUF", # ruff
]
extend-ignore = [
  "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
