[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wgpu-shadertoy"
dynamic = ["version", "readme"]
dependencies = [
  "wgpu>=0.16.0,<0.17.0",
  "requests",
  "numpy",
  "Pillow",
]
description = "Shadertoy implementation based on wgpu-py"
license = {file = "LICENSE"}
requires-python = ">=3.8.0"
authors = [
  {name = "Jan Kels", email = "Jan.Kels@hhu.de"},
]

[project.scripts]
wgpu-shadertoy = "wgpu_shadertoy.cli:main_cli"

[project.urls]
Repository = "https://github.com/pygfx/shadertoy"

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest",
    "ruff",
    "imageio",
    "wheel",
    "setuptools",
    "twine",
    "glfw",
]

[tool.setuptools.dynamic]
version = {attr = "wgpu_shadertoy.__version__"}
readme = {file = ["README.md"], "content-type" = "text/markdown"}

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "RUF", # ruff
]
extend-ignore = [
  "E501",  # line too long
  "RUF005", # + inside concatenation messes with numpy
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
